update: add main content section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,56 @@
         </h1>
         <img src="assets/laptop.png" alt="Laptop" class="hero-img" />
       </section>
+      
+      <!-- MAIN CONTENT -->
+      <section class="main-content" id="main-content">
+        <div class="main-content-inner">
+          <div class="main-row-top">
+            <div class="left-content">
+              <button class="contact-btn">CONTACTO</button>
+              <h2>
+                ANALIZAMOS TU NEGOCIO. TE OFRECEMOS<br />
+                SOLO LOS EQUIPOS QUE NECESITAS.<br />
+                OPTIMIZAMOS TUS COSTOS EN TI
+              </h2>
+            </div>
+            <div class="right-content">
+              <p>
+                Comprendemos que cada empresa tiene necesidades y presupuestos
+                distintos. Por ello, incorporamos dentro de Smart Leasing el
+                servicio que evalúa los recursos, procesos y objetivos de cada
+                cliente para recomendar los equipos más eficientes y rentables,
+                asegurando que inviertan solo en lo que realmente necesitan.
+              </p>
+              <div class="rating">
+                <span>
+                  <span class="star">&#9733;</span>
+                  <span class="star">&#9733;</span>
+                  <span class="star">&#9733;</span>
+                  <span class="star">&#9733;</span>
+                  <span class="star">&#9733;</span>
+                </span>
+              </div>
+              <span class="main-score">4.5/5</span>
+              <span class="reviews">Nuestros clientes nos recomiendan</span>
+            </div>
+          </div>
+          <div class="main-row-bottom">
+            <div class="gallery-item">
+              <img src="assets/team1.png" alt="IT Technician" />
+            </div>
+            <div class="gallery-item text">
+              <p>
+                Contamos con gente capacitada para<br />
+                la instalación y capacitación de su personal.
+              </p>
+            </div>
+            <div class="gallery-item">
+              <img src="assets/team2.png" alt="Team Meeting" />
+            </div>
+          </div>
+        </div>
+      </section>
 
   </body>
 </html>
