update: add main content section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,102 @@
           </div>
         </div>
       </section>
+      
+      <!-- CARDS/PLANS -->
+      <section class="cards-section" id="plans">
+        <h2 class="cards-title">
+          CONTAMOS CON DOS PLANES QUE BRINDAN SOLUCIONES A TU NEGOCIO
+        </h2>
+        <div class="cards-container">
+          <div class="cardboxs1">
+            <h2>BASIC - LEASING</h2>
+            <img
+              src="assets/Logos/CATBASIC.jpg"
+              alt="Basic Leasing Icon"
+              class="card-icon"
+            />
+            <p>
+              Plan basico el cual consta de arrendar una cantidad limitada de
+              equipos.
+            </p>
+            <button class="contact-btn">EMPEZAR</button>
+            <ul class="card-list">
+              <li>
+                <span class="check">&#10003;</span> Renovación de equipos cada
+                24 meses.
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Soporte técnico en horario
+                laboral (lunes a viernes, 9am-6pm).
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Gestión de garantías
+                incluida.
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Mantenimiento preventivo 1
+                vez al año.
+              </li>
+              <li class="unavailable">
+                <span class="check">&#10003;</span> Incluye consultoría
+                personalizada TI
+              </li>
+              <li class="unavailable">
+                <span class="check">&#10003;</span> Soporte 24/7.
+              </li>
+              <li class="unavailable">
+                <span class="check">&#10003;</span> Reposición inmediata de
+                equipos (tiempo estándar 5-7 días).
+              </li>
+              <li class="unavailable">
+                <span class="check">&#10003;</span> Incluye licencias de
+                software.
+              </li>
+            </ul>
+          </div>
+          <div class="cardboxs2">
+            <h2>SMART - LEASING</h2>
+            <img
+              src="assets/Logos/CATPREMIUM.jpg"
+              alt="Smart Leasing Icon"
+              class="card-icon"
+            />
+            <p>La solución avanzada para organizaciones en expansión.</p>
+            <button class="contact-btn">EMPEZAR</button>
+            <ul class="card-list">
+              <li>
+                <span class="check">&#10003;</span> Renovación de equipos cada
+                12-18 meses.
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Soporte técnico 24/7 (remoto
+                y presencial).
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Consultoría en optimización
+                de costos TI.
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Reemplazo inmediato en
+                fallas críticas.
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Mantenimiento preventivo
+                cada 6 meses.
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Gestión de licencias de
+                software (Office, antivirus, etc.).
+              </li>
+              <li>
+                <span class="check">&#10003;</span> Reportes de uso y métricas
+                de desempeño.
+              </li>
+              <li class="unavailable"><span class="check">&#10003;</span></li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
   </body>
 </html>
