Update: add client slider section

--- a/index.html
+++ b/index.html
@@ -180,6 +180,61 @@
           </div>
         </div>
       </section>
+      
+      <!-- CLIENTES SLIDER INFINITE -->
+      <section class="clientes-slider-section" id="clients">
+        <h2 class="clientes-title">NUESTROS CLIENTES</h2>
+        <div class="clientes-slider-container">
+          <button class="clientes-arrow left" id="clientes-prev">
+            &#10094;
+          </button>
+          <div class="clientes-slider" id="clientes-slider">
+            <img
+              src="assets/Logos/LogoAVMADUANERASAC.png"
+              alt="AVMADUANERASAC Logo"
+              class="clientes-logo"
+            />
+            <img
+              src="assets/Logos/LogoCLINICAAREQUIPA.png"
+              alt="CLINICA AREQUIPA Logo"
+              class="clientes-logo"
+            />
+            <img
+              src="assets/Logos/LogoCLINICAAUNA.png"
+              alt="CLINICA AUNA Logo"
+              class="clientes-logo"
+            />
+            <img
+              src="assets/Logos/LogoCOMPANIAMINERAAGREGADOSCALCAREOSS.png"
+              alt="COMPANIA MINERA AGREGADOS CALCAREOS Logo"
+              class="clientes-logo"
+            />
+            <img
+              src="assets/Logos/LogoCONSULTORIAYESTRATEGIAS.jpeg"
+              alt="CONSULTORIA Y ESTRATEGIAS Logo"
+              class="clientes-logo"
+            />
+            <img
+              src="assets/Logos/LogoCREDINKA.png"
+              alt="CREDINKA Logo"
+              class="clientes-logo"
+            />
+            <img
+              src="assets/Logos/LogoDECORLUX.jpg"
+              alt="DECORLUX Logo"
+              class="clientes-logo"
+            />
+            <img
+              src="assets/Logos/LogoDINERSTRAVELPERU.png"
+              alt="DINERS TRAVEL PERU Logo"
+              class="clientes-logo"
+            />
+          </div>
+          <button class="clientes-arrow right" id="clientes-next">
+            &#10095;
+          </button>
+        </div>
+      </section>
 
   </body>
 </html>
