feat: add link front-end

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
           <li><a href="#plans">PLANES</a></li>
           <li><a href="#clients">CLIENTES</a></li>
           <li><a href="#videos">VIDEOS</a></li>
-          <li><a href="#" class="login-btn">INICIAR SESION</a></li>
+          <li>
+            <a
+              href="https://dreamy-sunshine-e3be2b.netlify.app/"
+              class="login-btn"
+              >INICIAR SESION</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
