feat(video): update videos for landing page

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <img src="" alt="Video 1" />
                 <div
                   class="play-button"
-                  onclick="window.open('https://www.youtube.com/watch?v=VIDEO_ID_1', '_blank')"
+                  onclick="window.open('https://www.youtube.com/watch?v=2q87N3Umm0w', '_blank')"
                 ></div>
               </div>
             </div>
@@ -246,7 +246,7 @@
                 <img src="" alt="Video 2" />
                 <div
                   class="play-button"
-                  onclick="window.open('https://www.youtube.com/watch?v=VIDEO_ID_2', '_blank')"
+                  onclick="window.open('https://www.youtube.com/watch?v=qiV-ZW8_nnM', '_blank')"
                 ></div>
               </div>
             </div>
@@ -255,7 +255,7 @@
                 <img src="" alt="Video 3" />
                 <div
                   class="play-button"
-                  onclick="window.open('https://www.youtube.com/watch?v=VIDEO_ID_3', '_blank')"
+                  onclick="window.open('https://www.youtube.com/watch?v=bIFjkc5LXRU', '_blank')"
                 ></div>
               </div>
             </div>
