--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <img src="" alt="Video 1" />
                 <div
                   class="play-button"
-                  onclick="window.open('https://www.youtube.com/watch?v=2q87N3Umm0w', '_blank')"
+                  onclick="window.open('https://www.youtube.com/embed/2q87N3Umm0w?si=De5GnSefxi2ZFicb', '_blank')"
                 ></div>
               </div>
             </div>
@@ -246,7 +246,7 @@
                 <img src="" alt="Video 2" />
                 <div
                   class="play-button"
-                  onclick="window.open('https://www.youtube.com/watch?v=qiV-ZW8_nnM', '_blank')"
+                  onclick="window.open('https://www.youtube.com/embed/qiV-ZW8_nnM?si=SH4L2nRH4T7AybqS', '_blank')"
                 ></div>
               </div>
             </div>
@@ -255,7 +255,7 @@
                 <img src="" alt="Video 3" />
                 <div
                   class="play-button"
-                  onclick="window.open('https://www.youtube.com/watch?v=bIFjkc5LXRU', '_blank')"
+                  onclick="window.open('https://www.youtube.com/embed/bIFjkc5LXRU?si=2HG4yWBasJMJLKJo', '_blank')"
                 ></div>
               </div>
             </div>
